# EvoSkill-Foundry

./: .env.example  .gitignore  README.md  llm_profiles.example.toml  pyproject.toml
app/bench/: __init__.py  agent_benchmarks.py  agent_verified_support.py  benchmark_adapter_support.py  benchmark_support.py  livecodebench_official_support.py  livecodebench_prepare.py  math_grading.py  multi_turn_agent.py  or_benchmarks.py  personalization_references.py  personalization_support.py  runtime_support.py  safety_official_support.py  safety_support.py  self_critique.py
app/benchmarks/: __init__.py  fetch_prompt_benchmarks.py
app/codegen/: README.md  __init__.py  catalog.py  llm.py  (+14 more)
benchmark/: README.md  prepare_datasets.py  registry.json
data/: discrete_experiences.json  discrete_experiences.md
docs/: benchmarks.md  plan.md  post-grpo-notes.md  scope.md  todo.md
references/: README.md  backend-modules.md  evaluation-contract.md  personas.json  runtime-flow.md
scripts/: bootstrap_local_demo.sh  fetch_prompt_benchmarks.py  fetch_prompt_benchmarks.sh
tests/: helpers.py  test_agent_benchmarks.py  test_agent_verified_official_envs.py  test_app_entry.py  test_bbh_prepare.py  test_benchmark_adapter_memory.py  test_benchmark_comparison.py  test_benchmark_prepare_datasets.py  test_bird_prepare.py  test_co_benchmarks.py  test_codegen_catalog.py  test_codegen_config.py  test_codegen_defaults.py  test_codegen_runner.py  test_codegen_verifier.py  test_demo.py  test_discrete_demo.py  test_gpqa_diamond_prepare.py  test_memory_store.py  test_mmlu_pro_prepare.py  test_multi_turn_agent.py  test_or_benchmarks.py  test_personalization_reference_catalog.py  test_personalization_task_smoke.py  test_prompt_benchmarks.py  test_reference_boundaries.py  test_runner_cli.py  test_safety_prepare.py  test_safety_support.py  test_server_api.py  test_socialbench_alignment.py  test_spider_prepare.py  test_text2sql_support.py  test_ui_smoke.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
(+327 files in other folders)
