[project]
name = "autoresearch-foundry"
version = "0.1.0"
description = "Autoresearch workbench with deterministic verification and replayable memory."
requires-python = ">=3.11"
# This root package only covers the active app/* implementation.
# Reference clones under External/ are not part of the runtime environment.
dependencies = [
  "matplotlib>=3.9,<4",
  "math-verify[antlr4_13_2]>=0.9,<1",
  "PyYAML>=6,<7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
